--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </h1>
 
     <!-- Hero Image -->
-    <img src="images/hero.png" alt="Hero Image" id="hero-img"
+    <img src="images/hero.png"  id="hero-img"
         style="position: absolute; width: 100%; height: 100%; object-fit: cover; opacity: 0.25; 
         mix-blend-mode: screen; transition: filter 0.5s ease-in-out;
         filter: drop-shadow(0px 0px 25px rgba(255, 0, 0, 0.9));">
